Bug #1391 <https://bugs.freedesktop.org/show_bug.cgi?id=1391> Patch #4739     <https://bugs.freedesktop.org/attachment.cgi?id=4739> xdm hangs in a     loop when invalid xpm bitmap is used for logo (Costantino Leandro     <lcostantino@gmail.com>)